convert txt file to input variables

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -9,7 +9,27 @@
    "outputs": [],
    "source": [
     "import pulp\n",
+    "import csv\n",
     "from pulp import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''generate adj_matrix, sources, sinks from txt files.'''\n",
+    "\n",
+    "with open('Adj_Matrix1.txt', 'r') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    adj_matrix = list(reader)\n",
+    "adj_matrix = [[int(j) for j in i[0:(len(i)-2)]] for i in adj_matrix]\n",
+    "sinks = [any(row) for row in adj_matrix]\n",
+    "sinks = [i for i, v in enumerate(sinks) if not v]\n",
+    "adj_matrix_t = list(map(list, zip(*adj_matrix)))\n",
+    "sources = [any(row) for row in adj_matrix_t]\n",
+    "sources = [i for i, v in enumerate(sources) if not v]\n"
    ]
   },
   {
@@ -489,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
