convert txt file to input variables

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pulp\n",
@@ -15,29 +13,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''generate adj_matrix, sources, sinks from txt files.'''\n",
-    "\n",
-    "with open('Adj_Matrix1.txt', 'r') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    adj_matrix = list(reader)\n",
-    "adj_matrix = [[int(j) for j in i[0:(len(i)-2)]] for i in adj_matrix]\n",
-    "sinks = [any(row) for row in adj_matrix]\n",
-    "sinks = [i for i, v in enumerate(sinks) if not v]\n",
-    "adj_matrix_t = list(map(list, zip(*adj_matrix)))\n",
-    "sources = [any(row) for row in adj_matrix_t]\n",
-    "sources = [i for i, v in enumerate(sources) if not v]\n"
+    "def read_txt(filename):\n",
+    "    with open(filename, 'r') as f:\n",
+    "        reader = csv.reader(f)\n",
+    "        adj_matrix = list(reader)\n",
+    "    adj_matrix = [[int(j) for j in i[0:(len(i))]] for i in adj_matrix]\n",
+    "    sinks = [any(row) for row in adj_matrix]\n",
+    "    sinks = [i for i, v in enumerate(sinks) if not v]\n",
+    "    adj_matrix_t = list(map(list, zip(*adj_matrix)))\n",
+    "    sources = [any(row) for row in adj_matrix_t]\n",
+    "    sources = [i for i, v in enumerate(sources) if not v]\n",
+    "    return adj_matrix, sources, sinks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
@@ -108,11 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Main Input to the program\n",
@@ -142,15 +159,14 @@
     "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
     "sources = [0,1,2]\n",
     "sinks = [9,10,11]\n",
-    "flow_val = 7"
+    "# adj_matrix, s, s = read_txt('Adj_Matrix0.txt')\n",
+    "flow_val = 7\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Preprocess graph, prepare variables and vertex dictionary for LP program\n",
@@ -161,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
@@ -198,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +385,7 @@
        "EdgeFlows_y_9_12 Continuous"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
