add cost function

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''generate adj_matrix, sources, sinks from txt files.'''\n",
+    "'''\n",
+    "Get adj_matrix from txt files.\n",
+    "\n",
+    "Inputs:\n",
+    "filename - filename of a comma separated value file\n",
+    "\n",
+    "Output:\n",
+    "adj_matrix - n*n matrix for n vertices where adj_matrix[i][j] represents a directed edge from i to j if its 1\n",
+    "'''\n",
     "def read_txt(filename):\n",
     "    with open(filename, 'r') as f:\n",
     "        reader = csv.reader(f)\n",
     "        adj_matrix = list(reader)\n",
     "    adj_matrix = [[int(j) for j in i[0:(len(i))]] for i in adj_matrix]\n",
-    "    sinks = [any(row) for row in adj_matrix]\n",
-    "    sinks = [i for i, v in enumerate(sinks) if not v]\n",
-    "    adj_matrix_t = list(map(list, zip(*adj_matrix)))\n",
-    "    sources = [any(row) for row in adj_matrix_t]\n",
-    "    sources = [i for i, v in enumerate(sources) if not v]\n",
-    "    return adj_matrix, sources, sinks"
+    "#     sinks = [any(row) for row in adj_matrix]\n",
+    "#     sinks = [i for i, v in enumerate(sinks) if not v]\n",
+    "#     adj_matrix_t = list(map(list, zip(*adj_matrix)))\n",
+    "#     sources = [any(row) for row in adj_matrix_t]\n",
+    "#     sources = [i for i, v in enumerate(sources) if not v]\n",
+    "    return adj_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,31 +113,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Cost function\n",
+    "\n",
+    "Inputs:\n",
+    "x       - capacity of edge\n",
+    "edge    - edge indice\n",
+    "\n",
+    "Outputs:\n",
+    "y       - cost of assigning capacity of an edge to x\n",
+    "'''\n",
+    "def cost_function(x, edge):\n",
+    "    return x-1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "Main Input to the program\n",
@@ -145,27 +151,27 @@
     "sinks = [2]\n",
     "flow_val = 2\n",
     "'''\n",
-    "adj_matrix = [[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-    "[0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0], \n",
-    "[0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0], \n",
-    "[0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0], \n",
-    "[0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0], \n",
-    "[0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0], \n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0], \n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1], \n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
+    "# adj_matrix = [[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "# [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0], \n",
+    "# [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0], \n",
+    "# [0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0], \n",
+    "# [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0], \n",
+    "# [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0], \n",
+    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0], \n",
+    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1], \n",
+    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
+    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
+    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
+    "adj_matrix = read_txt('Adj_Matrix0.txt')\n",
     "sources = [0,1,2]\n",
     "sinks = [9,10,11]\n",
-    "# adj_matrix, s, s = read_txt('Adj_Matrix0.txt')\n",
-    "flow_val = 7\n"
+    "flow_val = 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,13 +218,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lp_problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Graph min cost:\n",
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lp_problem.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Optimal'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pulp.LpStatus[lp_problem.status]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EdgeCaps_x_0_1 = 2.0\n",
+      "EdgeCaps_x_0_2 = 3.0\n",
+      "EdgeCaps_x_0_3 = 2.0\n",
+      "EdgeCaps_x_10_13 = 1.0\n",
+      "EdgeCaps_x_11_13 = 4.0\n",
+      "EdgeCaps_x_12_13 = 2.0\n",
+      "EdgeCaps_x_1_4 = 1.0\n",
+      "EdgeCaps_x_1_5 = 1.0\n",
+      "EdgeCaps_x_2_4 = 1.0\n",
+      "EdgeCaps_x_2_5 = 1.0\n",
+      "EdgeCaps_x_2_6 = 1.0\n",
+      "EdgeCaps_x_3_5 = 1.0\n",
+      "EdgeCaps_x_3_6 = 1.0\n",
+      "EdgeCaps_x_4_5 = 1.0\n",
+      "EdgeCaps_x_4_7 = 2.0\n",
+      "EdgeCaps_x_5_7 = 2.0\n",
+      "EdgeCaps_x_5_9 = 1.0\n",
+      "EdgeCaps_x_6_5 = 1.0\n",
+      "EdgeCaps_x_6_9 = 2.0\n",
+      "EdgeCaps_x_7_10 = 1.0\n",
+      "EdgeCaps_x_7_11 = 3.0\n",
+      "EdgeCaps_x_9_11 = 1.0\n",
+      "EdgeCaps_x_9_12 = 2.0\n",
+      "EdgeFlows_y_0_1 = 2.0\n",
+      "EdgeFlows_y_0_2 = 3.0\n",
+      "EdgeFlows_y_0_3 = 2.0\n",
+      "EdgeFlows_y_10_13 = 1.0\n",
+      "EdgeFlows_y_11_13 = 4.0\n",
+      "EdgeFlows_y_12_13 = 2.0\n",
+      "EdgeFlows_y_1_4 = 1.0\n",
+      "EdgeFlows_y_1_5 = 1.0\n",
+      "EdgeFlows_y_2_4 = 1.0\n",
+      "EdgeFlows_y_2_5 = 1.0\n",
+      "EdgeFlows_y_2_6 = 1.0\n",
+      "EdgeFlows_y_3_5 = 1.0\n",
+      "EdgeFlows_y_3_6 = 1.0\n",
+      "EdgeFlows_y_4_5 = 0.0\n",
+      "EdgeFlows_y_4_7 = 2.0\n",
+      "EdgeFlows_y_5_7 = 2.0\n",
+      "EdgeFlows_y_5_9 = 1.0\n",
+      "EdgeFlows_y_6_5 = 0.0\n",
+      "EdgeFlows_y_6_9 = 2.0\n",
+      "EdgeFlows_y_7_10 = 1.0\n",
+      "EdgeFlows_y_7_11 = 3.0\n",
+      "EdgeFlows_y_9_11 = 1.0\n",
+      "EdgeFlows_y_9_12 = 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for variable in lp_problem.variables():\n",
+    "    print(\"{} = {}\".format(variable.name, variable.varValue))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method LpProblem.variables of Graph min cost:\n",
        "MINIMIZE\n",
        "1*EdgeCaps_x_0_1 + 1*EdgeCaps_x_0_2 + 1*EdgeCaps_x_0_3 + 1*EdgeCaps_x_10_13 + 1*EdgeCaps_x_11_13 + 1*EdgeCaps_x_12_13 + 1*EdgeCaps_x_1_4 + 1*EdgeCaps_x_1_5 + 1*EdgeCaps_x_2_4 + 1*EdgeCaps_x_2_5 + 1*EdgeCaps_x_2_6 + 1*EdgeCaps_x_3_5 + 1*EdgeCaps_x_3_6 + 1*EdgeCaps_x_4_5 + 1*EdgeCaps_x_4_7 + 1*EdgeCaps_x_5_7 + 1*EdgeCaps_x_5_9 + 1*EdgeCaps_x_6_5 + 1*EdgeCaps_x_6_9 + 1*EdgeCaps_x_7_10 + 1*EdgeCaps_x_7_11 + 1*EdgeCaps_x_9_11 + 1*EdgeCaps_x_9_12 + -23\n",
        "SUBJECT TO\n",
@@ -382,127 +500,44 @@
        "EdgeFlows_y_7_10 Continuous\n",
        "EdgeFlows_y_7_11 Continuous\n",
        "EdgeFlows_y_9_11 Continuous\n",
-       "EdgeFlows_y_9_12 Continuous"
+       "EdgeFlows_y_9_12 Continuous\n",
+       ">"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lp_problem"
+    "# for v in edge_cap_vars:\n",
+    "#     print(v)\n",
+    "    \n",
+    "lp_problem.variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lp_problem.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Optimal'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pulp.LpStatus[lp_problem.status]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EdgeCaps_x_0_1 = 2.0\n",
-      "EdgeCaps_x_0_2 = 3.0\n",
-      "EdgeCaps_x_0_3 = 2.0\n",
-      "EdgeCaps_x_10_13 = 1.0\n",
-      "EdgeCaps_x_11_13 = 4.0\n",
-      "EdgeCaps_x_12_13 = 2.0\n",
-      "EdgeCaps_x_1_4 = 1.0\n",
-      "EdgeCaps_x_1_5 = 1.0\n",
-      "EdgeCaps_x_2_4 = 1.0\n",
-      "EdgeCaps_x_2_5 = 1.0\n",
-      "EdgeCaps_x_2_6 = 1.0\n",
-      "EdgeCaps_x_3_5 = 1.0\n",
-      "EdgeCaps_x_3_6 = 1.0\n",
-      "EdgeCaps_x_4_5 = 1.0\n",
-      "EdgeCaps_x_4_7 = 2.0\n",
-      "EdgeCaps_x_5_7 = 2.0\n",
-      "EdgeCaps_x_5_9 = 1.0\n",
-      "EdgeCaps_x_6_5 = 1.0\n",
-      "EdgeCaps_x_6_9 = 2.0\n",
-      "EdgeCaps_x_7_10 = 1.0\n",
-      "EdgeCaps_x_7_11 = 3.0\n",
-      "EdgeCaps_x_9_11 = 1.0\n",
-      "EdgeCaps_x_9_12 = 2.0\n",
-      "EdgeFlows_y_0_1 = 2.0\n",
-      "EdgeFlows_y_0_2 = 3.0\n",
-      "EdgeFlows_y_0_3 = 2.0\n",
-      "EdgeFlows_y_10_13 = 1.0\n",
-      "EdgeFlows_y_11_13 = 4.0\n",
-      "EdgeFlows_y_12_13 = 2.0\n",
-      "EdgeFlows_y_1_4 = 1.0\n",
-      "EdgeFlows_y_1_5 = 1.0\n",
-      "EdgeFlows_y_2_4 = 1.0\n",
-      "EdgeFlows_y_2_5 = 1.0\n",
-      "EdgeFlows_y_2_6 = 1.0\n",
-      "EdgeFlows_y_3_5 = 1.0\n",
-      "EdgeFlows_y_3_6 = 1.0\n",
-      "EdgeFlows_y_4_5 = 0.0\n",
-      "EdgeFlows_y_4_7 = 2.0\n",
-      "EdgeFlows_y_5_7 = 2.0\n",
-      "EdgeFlows_y_5_9 = 1.0\n",
-      "EdgeFlows_y_6_5 = 0.0\n",
-      "EdgeFlows_y_6_9 = 2.0\n",
-      "EdgeFlows_y_7_10 = 1.0\n",
-      "EdgeFlows_y_7_11 = 3.0\n",
-      "EdgeFlows_y_9_11 = 1.0\n",
-      "EdgeFlows_y_9_12 = 2.0\n"
+      "14.0\n"
      ]
     }
    ],
    "source": [
-    "for variable in lp_problem.variables():\n",
-    "    print(\"{} = {}\".format(variable.name, variable.varValue))"
+    "capValues = [v.varValue for v in lp_problem.variables()[0:(len(edge_cap_vars))]]\n",
+    "cost = sum([cost_function(cap, 0) for cap in capValues])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -527,5 +562,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
