return cost using linear cost function

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pulp\n",
     "import csv\n",
+    "import time\n",
     "from pulp import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,395 +152,105 @@
     "sinks = [2]\n",
     "flow_val = 2\n",
     "'''\n",
-    "# adj_matrix = [[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-    "# [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0], \n",
-    "# [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0], \n",
-    "# [0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0], \n",
-    "# [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0], \n",
-    "# [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0], \n",
-    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0], \n",
-    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1], \n",
-    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
-    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
-    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
-    "adj_matrix = read_txt('Adj_Matrix0.txt')\n",
-    "sources = [0,1,2]\n",
-    "sinks = [9,10,11]\n",
-    "flow_val = 7"
+    "def main():\n",
+    "    # adj_matrix = [[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    # [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
+    "    adj_matrix = read_txt('Adj_Matrix0.txt')\n",
+    "    sources = [0,1,2]\n",
+    "    sinks = [9,10,11]\n",
+    "    flow_val = 3\n",
+    "    cost = process_graph_LPSolver(adj_matrix, sources, sinks, flow_val, cost_function)\n",
+    "    print(cost)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Preprocess graph, prepare variables and vertex dictionary for LP program\n",
-    "transition_matrix,edge_capacity_factors,edge_flows,vertex_dict = preprocess_graph(adj_matrix,sources,sinks)\n",
-    "source = 0 #super source\n",
-    "sink = len(transition_matrix)-1 #super sink"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
-    "LP Problem formulation\n",
+    "calculate cost using LP Solver\n",
+    "\n",
+    "Inputs:\n",
+    "adj_matrix    - n*n matrix represented as a list of lists in python as shown below, 1 represents an edge from i->j\n",
+    "sources       - list of vertices that are sources\n",
+    "sinks         - list of vertices that are sinks\n",
+    "flow_val      - Value of flow that we want to reinstate\n",
+    "cost_function - cost function \n",
     "'''\n",
-    "lp_problem = pulp.LpProblem(\"Graph min cost\", pulp.LpMinimize)\n",
-    "edge_cap_vars = LpVariable.dicts(\"EdgeCaps\",edge_capacity_factors,1)\n",
-    "edge_flow_vars = LpVariable.dicts(\"EdgeFlows\",edge_flows,0)\n",
-    "\n",
-    "#Objective function\n",
-    "lp_problem += lpSum([(edge_cap_vars[i] - 1) for i in edge_capacity_factors]), \"Z\"\n",
-    "\n",
-    "#Flow conservation constraints for nodes besides source and sink\n",
-    "for i in range(len(vertex_dict)):\n",
-    "    if(i != source and i != sink):\n",
-    "        lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[i]['i']]) >= lpSum([edge_flow_vars[k] for k in vertex_dict[i]['o']])\n",
-    "        lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[i]['i']]) <= lpSum([edge_flow_vars[k] for k in vertex_dict[i]['o']])\n",
-    "\n",
-    "#Flow conservation for source\n",
-    "lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[source]['o']]) >= flow_val\n",
-    "lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[source]['o']]) <= flow_val\n",
-    "\n",
-    "#Flow conservation for sink\n",
-    "lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[sink]['i']]) >= flow_val\n",
-    "lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[sink]['i']]) <= flow_val\n",
-    "\n",
-    "#Capacity constraints\n",
-    "for cap, flow in zip(edge_capacity_factors, edge_flows):\n",
-    "    lp_problem += edge_flow_vars[flow] <= edge_cap_vars[cap]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lp_problem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lp_problem.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Optimal'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pulp.LpStatus[lp_problem.status]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EdgeCaps_x_0_1 = 2.0\n",
-      "EdgeCaps_x_0_2 = 3.0\n",
-      "EdgeCaps_x_0_3 = 2.0\n",
-      "EdgeCaps_x_10_13 = 1.0\n",
-      "EdgeCaps_x_11_13 = 4.0\n",
-      "EdgeCaps_x_12_13 = 2.0\n",
-      "EdgeCaps_x_1_4 = 1.0\n",
-      "EdgeCaps_x_1_5 = 1.0\n",
-      "EdgeCaps_x_2_4 = 1.0\n",
-      "EdgeCaps_x_2_5 = 1.0\n",
-      "EdgeCaps_x_2_6 = 1.0\n",
-      "EdgeCaps_x_3_5 = 1.0\n",
-      "EdgeCaps_x_3_6 = 1.0\n",
-      "EdgeCaps_x_4_5 = 1.0\n",
-      "EdgeCaps_x_4_7 = 2.0\n",
-      "EdgeCaps_x_5_7 = 2.0\n",
-      "EdgeCaps_x_5_9 = 1.0\n",
-      "EdgeCaps_x_6_5 = 1.0\n",
-      "EdgeCaps_x_6_9 = 2.0\n",
-      "EdgeCaps_x_7_10 = 1.0\n",
-      "EdgeCaps_x_7_11 = 3.0\n",
-      "EdgeCaps_x_9_11 = 1.0\n",
-      "EdgeCaps_x_9_12 = 2.0\n",
-      "EdgeFlows_y_0_1 = 2.0\n",
-      "EdgeFlows_y_0_2 = 3.0\n",
-      "EdgeFlows_y_0_3 = 2.0\n",
-      "EdgeFlows_y_10_13 = 1.0\n",
-      "EdgeFlows_y_11_13 = 4.0\n",
-      "EdgeFlows_y_12_13 = 2.0\n",
-      "EdgeFlows_y_1_4 = 1.0\n",
-      "EdgeFlows_y_1_5 = 1.0\n",
-      "EdgeFlows_y_2_4 = 1.0\n",
-      "EdgeFlows_y_2_5 = 1.0\n",
-      "EdgeFlows_y_2_6 = 1.0\n",
-      "EdgeFlows_y_3_5 = 1.0\n",
-      "EdgeFlows_y_3_6 = 1.0\n",
-      "EdgeFlows_y_4_5 = 0.0\n",
-      "EdgeFlows_y_4_7 = 2.0\n",
-      "EdgeFlows_y_5_7 = 2.0\n",
-      "EdgeFlows_y_5_9 = 1.0\n",
-      "EdgeFlows_y_6_5 = 0.0\n",
-      "EdgeFlows_y_6_9 = 2.0\n",
-      "EdgeFlows_y_7_10 = 1.0\n",
-      "EdgeFlows_y_7_11 = 3.0\n",
-      "EdgeFlows_y_9_11 = 1.0\n",
-      "EdgeFlows_y_9_12 = 2.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for variable in lp_problem.variables():\n",
-    "    print(\"{} = {}\".format(variable.name, variable.varValue))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method LpProblem.variables of Graph min cost:\n",
-       "MINIMIZE\n",
-       "1*EdgeCaps_x_0_1 + 1*EdgeCaps_x_0_2 + 1*EdgeCaps_x_0_3 + 1*EdgeCaps_x_10_13 + 1*EdgeCaps_x_11_13 + 1*EdgeCaps_x_12_13 + 1*EdgeCaps_x_1_4 + 1*EdgeCaps_x_1_5 + 1*EdgeCaps_x_2_4 + 1*EdgeCaps_x_2_5 + 1*EdgeCaps_x_2_6 + 1*EdgeCaps_x_3_5 + 1*EdgeCaps_x_3_6 + 1*EdgeCaps_x_4_5 + 1*EdgeCaps_x_4_7 + 1*EdgeCaps_x_5_7 + 1*EdgeCaps_x_5_9 + 1*EdgeCaps_x_6_5 + 1*EdgeCaps_x_6_9 + 1*EdgeCaps_x_7_10 + 1*EdgeCaps_x_7_11 + 1*EdgeCaps_x_9_11 + 1*EdgeCaps_x_9_12 + -23\n",
-       "SUBJECT TO\n",
-       "_C1: EdgeFlows_y_0_1 - EdgeFlows_y_1_4 - EdgeFlows_y_1_5 >= 0\n",
-       "\n",
-       "_C2: EdgeFlows_y_0_1 - EdgeFlows_y_1_4 - EdgeFlows_y_1_5 <= 0\n",
-       "\n",
-       "_C3: EdgeFlows_y_0_2 - EdgeFlows_y_2_4 - EdgeFlows_y_2_5 - EdgeFlows_y_2_6\n",
-       " >= 0\n",
-       "\n",
-       "_C4: EdgeFlows_y_0_2 - EdgeFlows_y_2_4 - EdgeFlows_y_2_5 - EdgeFlows_y_2_6\n",
-       " <= 0\n",
-       "\n",
-       "_C5: EdgeFlows_y_0_3 - EdgeFlows_y_3_5 - EdgeFlows_y_3_6 >= 0\n",
-       "\n",
-       "_C6: EdgeFlows_y_0_3 - EdgeFlows_y_3_5 - EdgeFlows_y_3_6 <= 0\n",
-       "\n",
-       "_C7: EdgeFlows_y_1_4 + EdgeFlows_y_2_4 - EdgeFlows_y_4_5 - EdgeFlows_y_4_7\n",
-       " >= 0\n",
-       "\n",
-       "_C8: EdgeFlows_y_1_4 + EdgeFlows_y_2_4 - EdgeFlows_y_4_5 - EdgeFlows_y_4_7\n",
-       " <= 0\n",
-       "\n",
-       "_C9: EdgeFlows_y_1_5 + EdgeFlows_y_2_5 + EdgeFlows_y_3_5 + EdgeFlows_y_4_5\n",
-       " - EdgeFlows_y_5_7 - EdgeFlows_y_5_9 + EdgeFlows_y_6_5 >= 0\n",
-       "\n",
-       "_C10: EdgeFlows_y_1_5 + EdgeFlows_y_2_5 + EdgeFlows_y_3_5 + EdgeFlows_y_4_5\n",
-       " - EdgeFlows_y_5_7 - EdgeFlows_y_5_9 + EdgeFlows_y_6_5 <= 0\n",
-       "\n",
-       "_C11: EdgeFlows_y_2_6 + EdgeFlows_y_3_6 - EdgeFlows_y_6_5 - EdgeFlows_y_6_9\n",
-       " >= 0\n",
-       "\n",
-       "_C12: EdgeFlows_y_2_6 + EdgeFlows_y_3_6 - EdgeFlows_y_6_5 - EdgeFlows_y_6_9\n",
-       " <= 0\n",
-       "\n",
-       "_C13: EdgeFlows_y_4_7 + EdgeFlows_y_5_7 - EdgeFlows_y_7_10 - EdgeFlows_y_7_11\n",
-       " >= 0\n",
-       "\n",
-       "_C14: EdgeFlows_y_4_7 + EdgeFlows_y_5_7 - EdgeFlows_y_7_10 - EdgeFlows_y_7_11\n",
-       " <= 0\n",
-       "\n",
-       "_C15:0 >= 0\n",
-       "\n",
-       "_C16:0 <= 0\n",
-       "\n",
-       "_C17: EdgeFlows_y_5_9 + EdgeFlows_y_6_9 - EdgeFlows_y_9_11 - EdgeFlows_y_9_12\n",
-       " >= 0\n",
-       "\n",
-       "_C18: EdgeFlows_y_5_9 + EdgeFlows_y_6_9 - EdgeFlows_y_9_11 - EdgeFlows_y_9_12\n",
-       " <= 0\n",
-       "\n",
-       "_C19: - EdgeFlows_y_10_13 + EdgeFlows_y_7_10 >= 0\n",
-       "\n",
-       "_C20: - EdgeFlows_y_10_13 + EdgeFlows_y_7_10 <= 0\n",
-       "\n",
-       "_C21: - EdgeFlows_y_11_13 + EdgeFlows_y_7_11 + EdgeFlows_y_9_11 >= 0\n",
-       "\n",
-       "_C22: - EdgeFlows_y_11_13 + EdgeFlows_y_7_11 + EdgeFlows_y_9_11 <= 0\n",
-       "\n",
-       "_C23: - EdgeFlows_y_12_13 + EdgeFlows_y_9_12 >= 0\n",
-       "\n",
-       "_C24: - EdgeFlows_y_12_13 + EdgeFlows_y_9_12 <= 0\n",
-       "\n",
-       "_C25: EdgeFlows_y_0_1 + EdgeFlows_y_0_2 + EdgeFlows_y_0_3 >= 7\n",
-       "\n",
-       "_C26: EdgeFlows_y_0_1 + EdgeFlows_y_0_2 + EdgeFlows_y_0_3 <= 7\n",
-       "\n",
-       "_C27: EdgeFlows_y_10_13 + EdgeFlows_y_11_13 + EdgeFlows_y_12_13 >= 7\n",
-       "\n",
-       "_C28: EdgeFlows_y_10_13 + EdgeFlows_y_11_13 + EdgeFlows_y_12_13 <= 7\n",
-       "\n",
-       "_C29: - EdgeCaps_x_0_1 + EdgeFlows_y_0_1 <= 0\n",
-       "\n",
-       "_C30: - EdgeCaps_x_0_2 + EdgeFlows_y_0_2 <= 0\n",
-       "\n",
-       "_C31: - EdgeCaps_x_0_3 + EdgeFlows_y_0_3 <= 0\n",
-       "\n",
-       "_C32: - EdgeCaps_x_1_4 + EdgeFlows_y_1_4 <= 0\n",
-       "\n",
-       "_C33: - EdgeCaps_x_1_5 + EdgeFlows_y_1_5 <= 0\n",
-       "\n",
-       "_C34: - EdgeCaps_x_2_4 + EdgeFlows_y_2_4 <= 0\n",
-       "\n",
-       "_C35: - EdgeCaps_x_2_5 + EdgeFlows_y_2_5 <= 0\n",
-       "\n",
-       "_C36: - EdgeCaps_x_2_6 + EdgeFlows_y_2_6 <= 0\n",
-       "\n",
-       "_C37: - EdgeCaps_x_3_5 + EdgeFlows_y_3_5 <= 0\n",
-       "\n",
-       "_C38: - EdgeCaps_x_3_6 + EdgeFlows_y_3_6 <= 0\n",
-       "\n",
-       "_C39: - EdgeCaps_x_4_5 + EdgeFlows_y_4_5 <= 0\n",
-       "\n",
-       "_C40: - EdgeCaps_x_4_7 + EdgeFlows_y_4_7 <= 0\n",
-       "\n",
-       "_C41: - EdgeCaps_x_5_7 + EdgeFlows_y_5_7 <= 0\n",
-       "\n",
-       "_C42: - EdgeCaps_x_5_9 + EdgeFlows_y_5_9 <= 0\n",
-       "\n",
-       "_C43: - EdgeCaps_x_6_5 + EdgeFlows_y_6_5 <= 0\n",
-       "\n",
-       "_C44: - EdgeCaps_x_6_9 + EdgeFlows_y_6_9 <= 0\n",
-       "\n",
-       "_C45: - EdgeCaps_x_7_10 + EdgeFlows_y_7_10 <= 0\n",
-       "\n",
-       "_C46: - EdgeCaps_x_7_11 + EdgeFlows_y_7_11 <= 0\n",
-       "\n",
-       "_C47: - EdgeCaps_x_9_11 + EdgeFlows_y_9_11 <= 0\n",
-       "\n",
-       "_C48: - EdgeCaps_x_9_12 + EdgeFlows_y_9_12 <= 0\n",
-       "\n",
-       "_C49: - EdgeCaps_x_10_13 + EdgeFlows_y_10_13 <= 0\n",
-       "\n",
-       "_C50: - EdgeCaps_x_11_13 + EdgeFlows_y_11_13 <= 0\n",
-       "\n",
-       "_C51: - EdgeCaps_x_12_13 + EdgeFlows_y_12_13 <= 0\n",
-       "\n",
-       "VARIABLES\n",
-       "1 <= EdgeCaps_x_0_1 Continuous\n",
-       "1 <= EdgeCaps_x_0_2 Continuous\n",
-       "1 <= EdgeCaps_x_0_3 Continuous\n",
-       "1 <= EdgeCaps_x_10_13 Continuous\n",
-       "1 <= EdgeCaps_x_11_13 Continuous\n",
-       "1 <= EdgeCaps_x_12_13 Continuous\n",
-       "1 <= EdgeCaps_x_1_4 Continuous\n",
-       "1 <= EdgeCaps_x_1_5 Continuous\n",
-       "1 <= EdgeCaps_x_2_4 Continuous\n",
-       "1 <= EdgeCaps_x_2_5 Continuous\n",
-       "1 <= EdgeCaps_x_2_6 Continuous\n",
-       "1 <= EdgeCaps_x_3_5 Continuous\n",
-       "1 <= EdgeCaps_x_3_6 Continuous\n",
-       "1 <= EdgeCaps_x_4_5 Continuous\n",
-       "1 <= EdgeCaps_x_4_7 Continuous\n",
-       "1 <= EdgeCaps_x_5_7 Continuous\n",
-       "1 <= EdgeCaps_x_5_9 Continuous\n",
-       "1 <= EdgeCaps_x_6_5 Continuous\n",
-       "1 <= EdgeCaps_x_6_9 Continuous\n",
-       "1 <= EdgeCaps_x_7_10 Continuous\n",
-       "1 <= EdgeCaps_x_7_11 Continuous\n",
-       "1 <= EdgeCaps_x_9_11 Continuous\n",
-       "1 <= EdgeCaps_x_9_12 Continuous\n",
-       "EdgeFlows_y_0_1 Continuous\n",
-       "EdgeFlows_y_0_2 Continuous\n",
-       "EdgeFlows_y_0_3 Continuous\n",
-       "EdgeFlows_y_10_13 Continuous\n",
-       "EdgeFlows_y_11_13 Continuous\n",
-       "EdgeFlows_y_12_13 Continuous\n",
-       "EdgeFlows_y_1_4 Continuous\n",
-       "EdgeFlows_y_1_5 Continuous\n",
-       "EdgeFlows_y_2_4 Continuous\n",
-       "EdgeFlows_y_2_5 Continuous\n",
-       "EdgeFlows_y_2_6 Continuous\n",
-       "EdgeFlows_y_3_5 Continuous\n",
-       "EdgeFlows_y_3_6 Continuous\n",
-       "EdgeFlows_y_4_5 Continuous\n",
-       "EdgeFlows_y_4_7 Continuous\n",
-       "EdgeFlows_y_5_7 Continuous\n",
-       "EdgeFlows_y_5_9 Continuous\n",
-       "EdgeFlows_y_6_5 Continuous\n",
-       "EdgeFlows_y_6_9 Continuous\n",
-       "EdgeFlows_y_7_10 Continuous\n",
-       "EdgeFlows_y_7_11 Continuous\n",
-       "EdgeFlows_y_9_11 Continuous\n",
-       "EdgeFlows_y_9_12 Continuous\n",
-       ">"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# for v in edge_cap_vars:\n",
-    "#     print(v)\n",
+    "def process_graph_LPSolver(adj_matrix, sources, sinks, flow_val, cost_function):\n",
+    "    #Preprocess graph, prepare variables and vertex dictionary for LP program\n",
+    "    transition_matrix,edge_capacity_factors,edge_flows,vertex_dict = preprocess_graph(adj_matrix,sources,sinks)\n",
+    "    source = 0 #super source\n",
+    "    sink = len(transition_matrix)-1 #super sink\n",
     "    \n",
-    "lp_problem.variables"
+    "    '''\n",
+    "    LP Problem formulation\n",
+    "    '''\n",
+    "    lp_problem = pulp.LpProblem(\"Graph min cost\", pulp.LpMinimize)\n",
+    "    edge_cap_vars = LpVariable.dicts(\"EdgeCaps\",edge_capacity_factors,1)\n",
+    "    edge_flow_vars = LpVariable.dicts(\"EdgeFlows\",edge_flows,0)\n",
+    "\n",
+    "    #Objective function\n",
+    "    lp_problem += lpSum([(edge_cap_vars[i] - 1) for i in edge_capacity_factors]), \"Z\"\n",
+    "\n",
+    "    #Flow conservation constraints for nodes besides source and sink\n",
+    "    for i in range(len(vertex_dict)):\n",
+    "        if(i != source and i != sink):\n",
+    "            lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[i]['i']]) >= lpSum([edge_flow_vars[k] for k in vertex_dict[i]['o']])\n",
+    "            lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[i]['i']]) <= lpSum([edge_flow_vars[k] for k in vertex_dict[i]['o']])\n",
+    "\n",
+    "    #Flow conservation for source\n",
+    "    lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[source]['o']]) >= flow_val\n",
+    "    lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[source]['o']]) <= flow_val\n",
+    "\n",
+    "    #Flow conservation for sink\n",
+    "    lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[sink]['i']]) >= flow_val\n",
+    "    lp_problem += lpSum([edge_flow_vars[j] for j in vertex_dict[sink]['i']]) <= flow_val\n",
+    "\n",
+    "    #Capacity constraints\n",
+    "    for cap, flow in zip(edge_capacity_factors, edge_flows):\n",
+    "        lp_problem += edge_flow_vars[flow] <= edge_cap_vars[cap]\n",
+    "    \n",
+    "    #Solve LP_problem\n",
+    "    lp_problem.solve()\n",
+    "    \n",
+    "    assert(pulp.LpStatus[lp_problem.status] == 'Optimal')\n",
+    "    \n",
+    "    #compute total cost\n",
+    "    capValues = [v.varValue for v in lp_problem.variables()[0:(len(edge_cap_vars))]]\n",
+    "    cost = sum([cost_function(cap, 0) for cap in capValues])\n",
+    "    \n",
+    "    return cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.0\n"
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "capValues = [v.varValue for v in lp_problem.variables()[0:(len(edge_cap_vars))]]\n",
-    "cost = sum([cost_function(cap, 0) for cap in capValues])"
+    "main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
